--- a/package.json
+++ b/package.json
@@ -1,29 +1,32 @@
 {
-  "name": "pwa-unit-converter",
-  "version": "1.0.0",
-  "description": "Unit converter PWA",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Fiqri Syah Redha",
-  "license": "ISC",
-  "dependencies": {
-    "convert-units": "^2.3.4",
-    "materialize-css": "^1.0.0-rc.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.10.3",
-    "@babel/preset-env": "^7.10.3",
-    "babel-loader": "^8.1.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "file-loader": "^6.0.0",
-    "html-webpack-plugin": "^4.3.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^4.2.2"
-  }
+    "name": "pwa-unit-converter",
+    "version": "1.0.0",
+    "description": "Unit converter PWA",
+    "main": "index.js",
+    "scripts": {
+        "start-dev": "webpack-dev-server --config webpack.dev.js",
+        "build": "webpack --config webpack.prod.js"
+    },
+    "author": "Fiqri Syah Redha",
+    "license": "ISC",
+    "dependencies": {
+        "convert-units": "^2.3.4",
+        "materialize-css": "^1.0.0-rc.2"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.10.3",
+        "@babel/preset-env": "^7.10.3",
+        "babel-loader": "^8.1.0",
+        "clean-webpack-plugin": "^3.0.0",
+        "copy-webpack-plugin": "^6.0.2",
+        "css-loader": "^3.6.0",
+        "file-loader": "^6.0.0",
+        "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
+        "webpack-dev-server": "^3.11.0",
+        "webpack-merge": "^4.2.2"
+    }
 }
