--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "html-webpack-plugin": "^4.3.0",
         "mini-css-extract-plugin": "^0.9.0",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "purgecss-webpack-plugin": "^2.3.0",
         "webpack": "^4.43.0",
         "webpack-cli": "^3.3.12",
         "webpack-dev-server": "^3.11.0",
