--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@babel/preset-env": "^7.10.3",
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
+        "compression-webpack-plugin": "^4.0.0",
         "copy-webpack-plugin": "^6.0.2",
         "css-loader": "^3.6.0",
         "file-loader": "^6.0.0",
